# habla

./: .gitignore  01_core.ho  02_pipes.ho  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  audit.py  calibracion_v02.habla  diagnostico.py  escaner_go.ho  hado_report.json  main.go  mcguire.ho  operacion_leviatan.ho  prueba.ho  pyproject.toml  recon_total.ho  setup.py
.claude/: settings.local.json
benchmarks/: benchmark.py
docs/: BENCHMARKS.md  capabilities-audit.md  cybersec-cookbook.md  design-decisions.md  llm-guide.md  multi-target.md  roadmap.md  spec.md  tutorial.md  v2_MISSION_01_REPORT.md
docs/evidence/: v0.2-proof-of-concept.md
examples/: 01-hola-mundo.habla  02-escaneo-basico.habla  03-recon-pipeline.habla  04-analisis-headers.habla  05-bruteforce-ssh.habla  06-osint-completo.habla  07-reporte-automatico.habla
grammar/: habla.peg
schemas/: hado_ast_v2.json
src/habla/: __init__.py  ast_nodes.py  cli.py  errors.py  lexer.py  normalizer.py  parser.py  runtime.py  transpiler.py
src/habla/backends/: __init__.py  base.py  c_transpiler.py  go_backend.py  python_transpiler.py  rust_transpiler.py
src/habla/cybersec/: __init__.py  analysis.py  attack.py  capture.py  crypto.py  fuzzer.py  recon.py  report.py  scanner.py
src/hado/: ast_nodes.py
src/hado/backends/: arduino_transpiler.py  base.py  bash_transpiler.py  c_transpiler.py  go_backend.py  go_transpiler.py  js_transpiler.py  powershell_transpiler.py  python_transpiler.py  rust_transpiler.py  solidity_transpiler.py
stdlib/: archivo.ho  crypto.habla  crypto.ho  red.habla  texto.ho
tests/: test_audit_multidisciplinary.py  test_cybersec.py  test_examples.py  test_exploit_capabilities.py  test_go_backend.py  test_lexer.py  test_normalizer.py  test_parser.py  test_transpiler.py  test_v2_ast_builder.py  test_v2_transpilers.py
(+10 files in other folders)
