[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hado-lang"
version = "0.1.0"
description = "A cybersecurity DSL designed for AI-native code generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Christian Toledo"}
]
keywords = ["cybersecurity", "dsl", "programming-language", "ai", "transpiler", "python", "go", "c", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
full = [
    "scapy>=2.5.0",
    "python-nmap>=0.7.1",
    "dnspython>=2.3.0",
    "paramiko>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[project.scripts]
hado = "hado.cli:main"

[project.urls]
Homepage = "https://github.com/chrisz-toledo/hado"
Repository = "https://github.com/chrisz-toledo/hado"
Issues = "https://github.com/chrisz-toledo/hado/issues"
Documentation = "https://github.com/chrisz-toledo/hado/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
